--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.6
 
 WORKDIR /app/
-RUN ls
-COPY deploymnts/requirements.txt /app/
+RUN ls -lrt
+COPY /deploymnts/requirements.txt /app/
 RUN pip install -r ./requirements.txt
 
 COPY app/house_price.py app/pricing_api.py app/housing_model.pkl app/housing_model_columns.pkl /app/
