--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.6
 
+ADD app/ /app
+ADD deployments/ /app
 WORKDIR /app/
 RUN ls -lrt
-COPY /deploymnts/requirements.txt /app/
+#COPY /deploymnts/requirements.txt /app/
 RUN pip install -r ./requirements.txt
 
 COPY app/house_price.py app/pricing_api.py app/housing_model.pkl app/housing_model_columns.pkl /app/
