--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -14,5 +14,5 @@ EXPOSE 7676
 
 #ENV ENVIRONMENT local
 
-ENTRYPOINT python app/pricing_api.py
+ENTRYPOINT python ./pricing_api.py
 #python ./pricing_api.py
